# uni_final_project

./: .dockerignore  .env.example  .gitignore  Dockerfile  MYNOTE.txt  RAG_Chatbot_Sprint_Plani.txt  README-VLLM.md  README.md  benchmark.py  docker-compose.yml  main.py  mkdocs.yml  pyproject.toml  test_stream.py  test_stream2.py  test_stream3.py  test_stream4.py
api/: app.py  metrics.py
benchmarks/: benchmark_tr_load.jsonl  benchmark_tr_quality_template.jsonl
config/: litellm-config.yaml
docs/: RUN.md  index.md  vllm-serving.md
docs/architecture/: generation.md  ingestion.md  overview.md  retrieval.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/interfaces/: benchmark-tr-dataset.md  benchmark.md  cli.md
docs/modules/: llm.md  loader.md  prompting.md  query_translation.md  reranker.md  retriever.md  splitter.md  vectorstore.md
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/chat/: chat-area.tsx  chat-header.tsx  message-input.tsx  settings-dialog.tsx  sidebar.tsx
frontend/src/lib/: api.ts
frontend/src/store/: chat-store.ts  data-store.ts  settings-store.ts  task-store.ts
qdrant_db/: meta.json
scripts/: benchmark.py  reset_qdrant.py  serve_vllm.sh
src/: agent.py  app_orchestrator.py  audit.py  config.py  context.py  llm.py  llm_provider.py  loader.py  memory.py  policy.py  prompting.py  query_translation.py  reranker.py  retriever.py  splitter.py  tasks.py  tooling.py  tools.py  tracing.py  vectorstore.py
streamlit/: app.py
